# cushlabs-ai-unwatermark

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  PORTFOLIO.md  README.md  portfolio.md  pyproject.toml  render.yaml
.github/workflows/: build-image.yml
docs/: ARCHITECTURE.md  LESSONS_LEARNED.md  USER-JOURNEY.md  quality-gate-report.md
scripts/: post-deploy-healthcheck.sh  restart_dev.sh
src/unwatermark/: __init__.py  cli.py  config.py  errors.py  web.py
src/unwatermark/core/: __init__.py  analyzer.py  detector.py  florence_detector.py  multipass.py  ocr_detector.py  remover.py  replicate_helpers.py  sam_detector.py  strategies.py  template_detector.py
src/unwatermark/core/techniques/: __init__.py  alpha_subtract.py  base.py  clone_stamp.py  lama_inpaint.py  registry.py  solid_fill.py
src/unwatermark/handlers/: __init__.py  image.py  pdf.py  pptx.py  video.py
src/unwatermark/models/: __init__.py  analysis.py  annotation.py
src/unwatermark/pages/: __init__.py  about.py  app.py  contact.py  help.py  landing.py  layout.py  not_found.py  privacy.py  terms.py
tests/: create_test_watermarks.py  test_e2e.py  test_region_clamp.py  test_replicate_helpers.py  test_web.py
